untracking folders to allow my to work on the same from second pc , kept migrations dir though , today I created migrations for my models , also tested my models by adding them to admin.py app , created a superuser and test list+ 1 item

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-.venv
-todo_app/__pycache__/
-todo_project/__pycache__/
+# Ignore virtual environment directory
+.venv/
+
+# Ignore Python bytecode files
+*.pyc
+__pycache__/
+
+# Ignore local development settings
+todo_project/settings/local.py
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
